feat: adding preload

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -113,13 +113,13 @@
     {% comment %} Preload image in landing {% endcomment %}
 
 
-    {% comment %} {%- if request.page_type == 'index' -%}
-    {% assign slide_1 = images['04-_copy.webp'] %}
+    {%- if request.page_type == 'index' -%}
+    {% comment %} {% assign slide_1 = images['04-_copy.webp'] %} {% endcomment %}
     {% assign slide_2 = images['09-_copy-2.webp'] %}
-      <link rel="preload" as="image" imagesrcset="{{ slide_1 | img_url: '600x' }} 600w,{{ slide_1 | img_url: '700x' }} 700w,{{ slide_1 | img_url: '800x' }} 800w,{{ slide_1 | img_url: '900x' }} 900w,{{ slide_1 | img_url: '1000x' }} 1000w,{{ slide_1 | img_url: '1100x' }} 1100w,{{ slide_1 | img_url: '1200x' }} 1200w,{{ slide_1 | img_url: '1300x' }} 1300w,{{ slide_1 | img_url: '1400x' }} 1400w,{{ slide_1 | img_url: '1600x' }} 1600w,{{ slide_1 | img_url: '1800x' }} 1800w,{{ slide_1 | img_url: '2000x' }} 2000w,{{ slide_1 | img_url: '2200x' }} 2200w,{{ slide_1 | img_url: '2400x' }} 2400w,{{ slide_1 | img_url: '2600x' }} 2600w,"imagesizes='auto'>
+      {% comment %} <link rel="preload" as="image" imagesrcset="{{ slide_1 | img_url: '600x' }} 600w,{{ slide_1 | img_url: '700x' }} 700w,{{ slide_1 | img_url: '800x' }} 800w,{{ slide_1 | img_url: '900x' }} 900w,{{ slide_1 | img_url: '1000x' }} 1000w,{{ slide_1 | img_url: '1100x' }} 1100w,{{ slide_1 | img_url: '1200x' }} 1200w,{{ slide_1 | img_url: '1300x' }} 1300w,{{ slide_1 | img_url: '1400x' }} 1400w,{{ slide_1 | img_url: '1600x' }} 1600w,{{ slide_1 | img_url: '1800x' }} 1800w,{{ slide_1 | img_url: '2000x' }} 2000w,{{ slide_1 | img_url: '2200x' }} 2200w,{{ slide_1 | img_url: '2400x' }} 2400w,{{ slide_1 | img_url: '2600x' }} 2600w,"imagesizes='auto'> {% endcomment %}
       <link rel="preload" as="image" imagesrcset="{{ slide_2 | img_url: '600x' }} 600w,{{ slide_2 | img_url: '700x' }} 700w,{{ slide_2 | img_url: '800x' }} 800w,{{ slide_2 | img_url: '900x' }} 900w,{{ slide_2 | img_url: '1000x' }} 1000w,{{ slide_2 | img_url: '1100x' }} 1100w,{{ slide_2 | img_url: '1200x' }} 1200w,{{ slide_2 | img_url: '1300x' }} 1300w,{{ slide_2 | img_url: '1400x' }} 1400w,{{ slide_2 | img_url: '1600x' }} 1600w,{{ slide_2 | img_url: '1800x' }} 1800w,{{ slide_2 | img_url: '2000x' }} 2000w,{{ slide_2 | img_url: '2200x' }} 2200w,{{ slide_2 | img_url: '2400x' }} 2400w,{{ slide_2 | img_url: '2600x' }} 2600w,"imagesizes='auto'>
-      <link rel="preload" as="image" href="{{ images['04-_copy.webp'] }}">
-    {% endif %} {% endcomment %}
+      {% comment %} <link rel="preload" as="image" href="{{ images['04-_copy.webp'] }}"> {% endcomment %}
+    {% endif %} 
 
     {%- if request.page_type == 'customers/addresses' -%}
       <script src="{{ 'shopify_common.js' | shopify_asset_url }}" defer></script>
