style: home page

--- a/assets/theme-cu.css
+++ b/assets/theme-cu.css
@@ -4,7 +4,10 @@
  * --------------------------------------------------------------------
  */
 .section {
-  margin: 125px 0;
+  margin: 80px 0;
+}
+.section[data-section-type="collection-list"]{
+  margin: 25px 0;
 }
 .addtocart {
   text-align: right;
@@ -30,7 +33,12 @@
   border: none;
   background: #ebebf1;
 }
-
+.nav-bar__item{
+  margin-right: 18px;
+}
+.nav-bar__link .icon--arrow-bottom{
+  margin-left: 4px;
+}
 /**
  * --------------------------------------------------------------------
  * HOME
