refactor: adding new address

--- a/sections/popups.liquid
+++ b/sections/popups.liquid
@@ -323,7 +323,7 @@ var myInterval = setInterval(function(){
           "type": "text",
           "id": "ifram_url",
           "label": "base URL embed document",
-          "default": "https://vicinity-app-git-enhancment-survey-rmanium.vercel.app"
+          "default": "https://marketing.vicinitymart.com"
         },
         {
           "type": "text",
