--- a/snippets/cu-modal.liquid
+++ b/snippets/cu-modal.liquid
@@ -14,7 +14,7 @@
                 </svg>
             </button>
             <div id="popup__content">
-                {% assign iframSource = "https://vicinity-app-git-enhancment-survey-rmanium.vercel.app?" %}
+                {% assign iframSource = "https://marketing.vicinitymart.com?" %}
                 {% assign utmSource = "utm_source=" | append : source | default: undefined %}
                 {% assign utmContent = "&utm_content=" | append: content | default: undefined %}
 
