fix: remove dm paginate

--- a/sections/main-blog.liquid
+++ b/sections/main-blog.liquid
@@ -86,7 +86,7 @@
             </div>
 
             {%- render 'pagination', paginate: paginate -%}
-          {% assign dm_paginate_by = paginate.page_size %}{%- endpaginate -%}
+          {%- endpaginate -%}
         </div>
       {%- endif -%}
 
@@ -297,7 +297,7 @@
   </div>
 </article>
 
-{% if dm_paginate_by %}{% render 'spurit_dmr_collection_template_snippet', paginate_by: dm_paginate_by %}{% endif %}{% schema %}
+{% schema %}
 {
   "name": "Blog post",
   "blocks": [
