--- a/sections/main-collection.liquid
+++ b/sections/main-collection.liquid
@@ -516,7 +516,7 @@
             {%- endif -%}
           </div>
         </div>
-      {% assign dm_paginate_by = paginate.page_size %}{%- endpaginate -%}
+      {%- endpaginate -%}
     </div>
   </div>
 
@@ -730,7 +730,7 @@
   </div>
 </section>
 
-{% if dm_paginate_by %}{% render 'spurit_dmr_collection_template_snippet', paginate_by: dm_paginate_by %}{% endif %}{% schema %}
+{% schema %}
 {
   "name": "Collection",
   "settings": [
