--- a/sections/main-customers-account.liquid
+++ b/sections/main-customers-account.liquid
@@ -102,15 +102,14 @@
               </div>
 
               {%- render 'pagination', paginate: paginate -%}
-            {% assign dm_paginate_by = paginate.page_size %}{%- endpaginate -%}
+            {%- endpaginate -%}
           {%- endif -%}
         </div>
       </div>
     </div>
   </div>
 </section>
-
-{% if dm_paginate_by %}{% render 'spurit_dmr_collection_template_snippet', paginate_by: dm_paginate_by %}{% endif %}{% schema %}
+{% schema %}
 {
   "name": "Account"
 }
