--- a/sections/main-blog-post.liquid
+++ b/sections/main-blog-post.liquid
@@ -160,7 +160,7 @@
                   {%- endfor -%}
 
                   {%- render 'pagination', paginate: paginate -%}
-                {% assign dm_paginate_by = paginate.page_size %}{%- endpaginate -%}
+                {%- endpaginate -%}
               </div>
             {%- endif -%}
 
@@ -431,7 +431,7 @@
   </div>
 </article>
 
-{% if dm_paginate_by %}{% render 'spurit_dmr_collection_template_snippet', paginate_by: dm_paginate_by %}{% endif %}{% schema %}
+{% schema %}
 {
   "name": "Blog post",
   "blocks": [
