--- a/sections/main-search.liquid
+++ b/sections/main-search.liquid
@@ -223,7 +223,7 @@
               </div>
             </div>
           </div>
-        {% assign dm_paginate_by = paginate.page_size %}{%- endpaginate -%}
+        {%- endpaginate -%}
       {%- endif -%}
     {%- else -%}
       <div class="empty-state">
@@ -270,7 +270,7 @@
   </div>
 </section>
 
-{% if dm_paginate_by %}{% render 'spurit_dmr_collection_template_snippet', paginate_by: dm_paginate_by %}{% endif %}{% schema %}
+{% schema %}
 {
   "name": "Search",
   "settings": [
