fix: priority chat fab

--- a/sections/popups.liquid
+++ b/sections/popups.liquid
@@ -18,7 +18,7 @@
                     <h3 class="popup-newsletter__title heading">{{ block.settings.title | escape }}</h3>
                   {%- endif -%}
 
-                  <button class="popup-newsletter__close link" data-action="close-popup" data-action="close-modal" aria-label="{{ 'general.accessibility.close' | t }}">
+                  <button class="popup-newsletter__close link" data-action="close-popup"  aria-label="{{ 'general.accessibility.close' | t }}">
                     {%- render 'icon', icon: 'close' -%}
                   </button>
 
