--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -190,7 +190,21 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     {% comment %} <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script> {% endcomment %}
     <link rel="preload" as="script" href="{{ '//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js'}}">
-    <script src="{{ '//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js' }}" defer></script>
+    <script src="{{ '//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js' }}" async></script>
+    <script defer>
+     $(document).ready(function () {
+        $(".announcement-slider").slick({
+          autoplay: true,
+          autoplaySpeed: 7000,
+          infinite: true,
+          adaptiveHeight: true,
+          arrows: false,
+          draggable: false,
+          swipe: false,
+          vertical: true,
+        });
+      });
+</script>
 
     {% render 'ajaxify-cart' %}
   <!--Gem_Page_Footer_Script-->
